--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ buildNumber.properties
 /src/main/resources/
 /src/test/resources/
 #define your config in this file which ignored
+access_toke.cache
